# rs-car-ipfs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: bin.rs  lib.rs  single_file.rs
src/pb/: mod.rs
src/single_file/: error.rs  mod.rs  single_file_buffer.rs  single_file_seek.rs  util.rs
tests/: README.md  generate.sh  single_file.rs
tests/data/: config.toml  config.toml.size-1.trickle.car  config.toml.size-262144.trickle.car  config.toml.size-32.trickle.car  config.toml.size-512.normal.car  helloworld.txt.size-1.normal.car  helloworld.txt.size-1.trickle.car  helloworld.txt.size-262144.trickle.car  rand_100K.bin.size-262144.normal.car  rand_100K.bin.size-262144.trickle.car  rand_100K.bin.size-32.normal.car  rand_100K.bin.size-32.trickle.car  rand_100K.bin.size-512.normal.car  rand_100K.bin.size-512.trickle.car  rand_10K.bin.size-1.normal.car  rand_10K.bin.size-1.trickle.car  rand_10K.bin.size-262144.normal.car  rand_10K.bin.size-262144.trickle.car  rand_10K.bin.size-32.normal.car  rand_10K.bin.size-32.trickle.car  rand_10K.bin.size-512.normal.car  rand_10K.bin.size-512.trickle.car  rand_1K.bin.size-1.normal.car  rand_1K.bin.size-1.trickle.car  rand_1K.bin.size-262144.normal.car  rand_1K.bin.size-262144.trickle.car  rand_1K.bin.size-32.normal.car  rand_1K.bin.size-32.trickle.car  rand_1K.bin.size-512.normal.car  rand_1K.bin.size-512.trickle.car  seq_1000.txt.size-1.normal.car  seq_1000.txt.size-1.trickle.car  seq_1000.txt.size-262144.normal.car  seq_1000.txt.size-262144.trickle.car  seq_1000.txt.size-32.normal.car  seq_1000.txt.size-32.trickle.car  seq_1000.txt.size-512.normal.car  seq_1000.txt.size-512.trickle.car  seq_2000.txt  seq_2000.txt.size-1.normal.car  (+39 more)
