[package]
name = "rs-car-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_car_ipfs"
path = "src/lib.rs"

[features]
bin = ["async-std"]

[[bin]]
name = "car-ipfs"
path = "src/bin.rs"
required-features = ["bin"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
rs-car = "0.1.0"
futures = "0.3.26"
cid = "0.10.1"
quick-protobuf = "0.8.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
hex-literal = "0.3.4"
