[package]
name = "rs-car-ipfs"
version = "0.3.0"
edition = "2021"
description = "rs-car wrapper to read files from IPFS trustless gateways"
keywords = ["ipfs", "ipld", "car"]
repository = "https://github.com/dapplion/rs-car-ipfs"
documentation = "https://docs.rs/rs-car-ipfs"
authors = ["dapplion <dapplion@chainsafe.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "rs_car_ipfs"
path = "src/lib.rs"

[features]
bin = ["async-std"]

[[bin]]
name = "car-ipfs"
path = "src/bin.rs"
required-features = ["bin"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
rs-car = "0.4"
futures = "0.3"
quick-protobuf = { default-features = false, features = ["std"], version = "0.8" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
hex-literal = "0.3.4"
